@@ -26,6 +26,7 @@ Bugs fixed:
 - 3324198 getObjectPath() may deref a NULL pointer
 - 3324247 Unnecessary NULL check in providerDrv
 - 3324255 Unnecessary NULL check in __cleanup_mt()
+- 3324265 _sfcb_trace may deref NULL pointers
 
 Changes in 1.3.11
 =================
